--- a/addCode/package.json
+++ b/addCode/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build && electron ."
+    "electron": "ng build && electron .",
+    "start:dev": "nodemon local-server.js"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "dexie": "^3.2.3",
     "localforage": "^1.10.0",
     "ngx-indexed-db": "^16.0.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -44,6 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^2.0.22",
     "typescript": "~4.9.4"
   }
 }
