--- a/addCode/package.json
+++ b/addCode/package.json
@@ -26,6 +26,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "dexie": "^3.2.3",
+    "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "ngx-indexed-db": "^16.0.0",
     "ngx-pagination": "^6.0.3",
